--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -18,6 +18,8 @@
 <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
 <link rel="stylesheet" href="stylesheets/animate.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/indexStyle.css">
+
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 
@@ -37,6 +39,7 @@
 
 <!-- HOME SECTION -->
 <div class="container">
+
      <div class="row">
           <section id="home" class="parallax-section">
 
@@ -44,13 +47,18 @@
                     <div class="home-wrapper">
                          <h3 class="wow fadeInUp" data-wow-delay="0.2s">랜 . 선 . 여. 행</h3>
                          <h1 class="wow fadeInUp" data-wow-delay="0.3s">지도 위에서 여행을 떠나요🚀</h1>
-                         <a href="#about" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a>
+                         <!-- <a href="#about" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a> -->
                     </div>
                </div>
-
           </section>
      </div>
+          <nav>
+               <a href="https://itjusttravel.herokuapp.com/columbus">지금, 떠나기🚀</a>
+               <a href="https://itjusttravel.herokuapp.com/mylist">나의, 여행지🙈</a>
+               <div id="indicator"></div>
+          </nav>
 </div>
+
 
 
 <!-- ABOUT SECTION -->
@@ -67,7 +75,7 @@
                               <p><span style="color:white;">해외여행을 못 가는 당신, 국내여행이라도, 아니면 랜섬여행이라도 떠나요</span></p>
                               <hr>
                               <p>
-                                   <span style="border-radius:12px; background-color: azure; color:cadetblue; padding:8px; font-size: 20px;"> 지금, 떠나기 🚀</span>
+                                   <span style="border-radius:12px; background-color: azure; color:cadetblue; padding:8px; font-size: 18px;"> 지금, 떠나기 🚀</span>
                               </p>
                          </div>
                     </a>
