--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -18,11 +18,13 @@
 <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
 <link rel="stylesheet" href="stylesheets/animate.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/mylist_indexStyle.css">
+
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 
 <!-- Main css -->
-<link rel="stylesheet" href="stylesheets/tooplate-style.css">
+<link rel="stylesheet" href="stylesheets/mylist_tooplate-style.css">
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -38,17 +40,20 @@
 <!-- HOME SECTION -->
 <div class="container">
      <div class="row">
-          <section id="home" class="parallax-section">
+          <section id="home" class="parallax-section" style = "background: none;">
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="home-wrapper">
                          <h3 class="wow fadeInUp" data-wow-delay="0.2s">랜 . 선 . 여. 행</h3>
                          <h1 class="wow fadeInUp" data-wow-delay="0.3s">내가 떠날, 나만의 여행지 🚀</h1>
-                         <a href="#work" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a>
                     </div>
                </div>
-
           </section>
      </div>
+          <nav>
+               <a href="https://itjusttravel.herokuapp.com/columbus">여행지 추가🚀</a>
+               <a href="https://itjusttravel.herokuapp.com/mylist">여행지 홈으로🙈</a>
+               <div id="indicator"></div>
+          </nav>
 </div>
 
 
